# facebook-chat

./: .gitignore  README.md  facebook-chat.cabal
app/: Main.hs
src/: Lib.hs  ResponseTypes.hs  Stickers.hs
src/Web/FacebookChat/: Lib.hs  Stickers.hs  Types.hs
