name:                facebook-chat
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.FacebookChat.Lib
                     , Web.FacebookChat.Types
                     , Web.FacebookChat.Stickers
  build-depends:       base >= 4.7 && < 5
                     , basic-prelude
                     , mtl
                     , exceptions
                     , unordered-containers
                     , random
                     , time
                     , parsec
                     , scientific

                     , text
                     , bytestring

                     , wreq
                     , http-client
                     , lens
                     , aeson
                     , lens-aeson

                     , html-conduit
                     , xml-lens

  default-language:    Haskell2010

executable facebook-chat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , basic-prelude
                     , lens
                     , mtl

                     , wreq

                     , facebook-chat
                     , colour
  default-language:    Haskell2010

test-suite facebook-chat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , facebook-chat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sid-kap/facebook-chat
